--- a/ChuniVController/ChuniVController/ChuniVController.csproj
+++ b/ChuniVController/ChuniVController/ChuniVController.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChuniIO.cs" />
     <Compile Include="TouchPad.xaml.cs">
       <DependentUpon>TouchPad.xaml</DependentUpon>
     </Compile>
@@ -62,10 +63,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
